<?xml version="1.0"?>
<package>
  <name>tf_pose_estimator</name>
  <version>0.0.0</version>
  <description>The tf_pose_estimator package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
